[package]
name = "cargit"
version = "0.2.7"
edition = "2021"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
description = "Small utility for automating groups of git and cargo actions"
repository = "https://github.com/gabe-lee/cargit.git"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"gmec" = "0.0.1"
