[package]
name = "cargit"
version = "0.2.19"
edition = "2021"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
description = "Small utility for automating groups of git and cargo actions"
repository = "https://github.com/gabe-lee/cargit.git"
license = "BSD-3-Clause"

[dependencies]
"gmec" = "0.0.3"
